[gd_scene load_steps=47 format=3 uid="uid://dwd0is40eq5wj"]

[ext_resource type="Script" path="res://Main/Main.gd" id="1_1j77y"]
[ext_resource type="AudioStream" uid="uid://cncfumfknpdnn" path="res://Audio/magic_music.mp3" id="2_0sa1h"]
[ext_resource type="PackedScene" uid="uid://caciatigfr468" path="res://Cauldron/cauldron.tscn" id="3_c5n6v"]
[ext_resource type="Texture2D" uid="uid://cx81clwrbb00g" path="res://Main/DuckDuckGoose.png" id="3_hijh1"]
[ext_resource type="Texture2D" uid="uid://bwr8x2jgr3pr3" path="res://Main/cauldFill.png" id="3_uwmjl"]
[ext_resource type="PackedScene" uid="uid://d34d62osrfh8v" path="res://Hair/Hair.tscn" id="3_wpo1m"]
[ext_resource type="PackedScene" uid="uid://saa8d5nb64bu" path="res://Bowl/bowl.tscn" id="4_oqy5q"]
[ext_resource type="Script" path="res://Bowl/IngredResource.gd" id="5_y2ain"]
[ext_resource type="Texture2D" uid="uid://cps8ox7yiud4l" path="res://Main/daisyIng.png" id="7_rj6up"]
[ext_resource type="Texture2D" uid="uid://dknt5r58tpvhs" path="res://Main/roseIng.png" id="8_3nfv3"]
[ext_resource type="AudioStream" uid="uid://b7siu0lc0nwan" path="res://Audio/cyan.mp3" id="8_8f8cl"]
[ext_resource type="Texture2D" uid="uid://djfh24hidagi2" path="res://Main/butterflyPea.png" id="8_16f0o"]
[ext_resource type="Texture2D" uid="uid://c7i5dbp4t66g7" path="res://Main/stJohnsWortIng.png" id="9_aqtup"]
[ext_resource type="Script" path="res://Main/IngredPath.gd" id="10_c6hfc"]
[ext_resource type="Script" path="res://Main/IngredientSprite.gd" id="11_o5g3n"]
[ext_resource type="AudioStream" uid="uid://bpttsyf6rlmq3" path="res://Audio/white.mp3" id="11_sw4j2"]
[ext_resource type="PackedScene" uid="uid://82if227xq4b1" path="res://Potion Bottle/potionFiller.tscn" id="13_6m1k2"]
[ext_resource type="AudioStream" uid="uid://ct8fmx51tench" path="res://Audio/magenta.mp3" id="13_dfn80"]
[ext_resource type="Script" path="res://Main/Welcome.gd" id="13_nsqdl"]
[ext_resource type="PackedScene" uid="uid://bbm4feb5nhu75" path="res://Potion Bottle/potionBottle.tscn" id="13_vxoe3"]
[ext_resource type="AudioStream" uid="uid://b3unaut3crx7t" path="res://Audio/yellow.mp3" id="15_m0s3q"]
[ext_resource type="Script" path="res://Main/CauldronScale.gd" id="17_nwgeh"]
[ext_resource type="AudioStream" uid="uid://bvckyfjlwamp3" path="res://Audio/black.mp3" id="17_u1x02"]
[ext_resource type="Texture2D" uid="uid://cl3rcopswf1fx" path="res://Main/menuIcon.png" id="18_c4fn2"]
[ext_resource type="PackedScene" uid="uid://b25amxixi7ivy" path="res://Color Requests/color_check_button.tscn" id="18_hem06"]
[ext_resource type="AudioStream" uid="uid://dfy1sqjav841e" path="res://Audio/green.mp3" id="18_iewu0"]
[ext_resource type="Texture2D" uid="uid://b60h2a8k7o7ug" path="res://Main/petunia.png" id="18_uksqr"]
[ext_resource type="Texture2D" uid="uid://02hruuxftya5" path="res://Main/Parchment.png" id="20_10sln"]
[ext_resource type="Texture2D" uid="uid://cussklpnj6mc1" path="res://Main/hydrangea.png" id="20_hcdgf"]
[ext_resource type="Script" path="res://Main/GameTypeButton.gd" id="21_1xi6p"]
[ext_resource type="Texture2D" uid="uid://cjramlyhhp3p3" path="res://Main/reset.png" id="25_kvh8o"]
[ext_resource type="Texture2D" uid="uid://cnnb85jglvj8i" path="res://Main/gameMode.png" id="29_u68kk"]
[ext_resource type="Texture2D" uid="uid://dey6cp4ux8xhb" path="res://Main/Agatha.png" id="33_63m2y"]
[ext_resource type="Texture2D" uid="uid://0ka2wx0opi3s" path="res://Main/Hat.png" id="34_pwty7"]
[ext_resource type="Texture2D" uid="uid://taqrtbpt1cef" path="res://Main/cat.png" id="36_ldfgg"]

[sub_resource type="Resource" id="Resource_6glc5"]
script = ExtResource("5_y2ain")
name = "Butterfly Pea"
texture = ExtResource("8_16f0o")
color = Color(0, 1, 1, 1)
audioFile = ExtResource("8_8f8cl")

[sub_resource type="Resource" id="Resource_eha88"]
script = ExtResource("5_y2ain")
name = "Daisy"
texture = ExtResource("7_rj6up")
color = Color(1, 1, 1, 1)
audioFile = ExtResource("11_sw4j2")

[sub_resource type="Resource" id="Resource_deqvn"]
script = ExtResource("5_y2ain")
name = "Rose"
texture = ExtResource("8_3nfv3")
color = Color(1, 0, 1, 1)
audioFile = ExtResource("13_dfn80")

[sub_resource type="Resource" id="Resource_pti66"]
script = ExtResource("5_y2ain")
name = "StJohnWorts"
texture = ExtResource("9_aqtup")
color = Color(1, 1, 0, 1)
audioFile = ExtResource("15_m0s3q")

[sub_resource type="Resource" id="Resource_x3q62"]
script = ExtResource("5_y2ain")
name = "Black"
texture = ExtResource("18_uksqr")
color = Color(0, 0, 0, 1)
audioFile = ExtResource("17_u1x02")

[sub_resource type="Resource" id="Resource_3f5x8"]
script = ExtResource("5_y2ain")
name = "Hydrangea"
texture = ExtResource("20_hcdgf")
color = Color(0, 1, 0, 1)
audioFile = ExtResource("18_iewu0")

[sub_resource type="Resource" id="Resource_gskca"]
script = ExtResource("5_y2ain")
name = "Butterfly Pea"
texture = ExtResource("8_16f0o")
color = Color(0, 0, 1, 1)

[sub_resource type="Resource" id="Resource_wuya8"]
script = ExtResource("5_y2ain")
name = "Red"
texture = ExtResource("8_3nfv3")
color = Color(1, 0, 0, 1)

[sub_resource type="Curve2D" id="Curve2D_7seai"]
_data = {
"points": PackedVector2Array(0, 0, 2.08165e-12, 2.08165e-12, 680, 475, 0, 0, 0, 0, 680, 650)
}
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hemfe"]
radius = 580.0
height = 1200.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u4l8t"]
size = Vector2(456.339, 357.414)

[node name="Main" type="Node2D" groups=["Bowls", "Ingreds"]]
script = ExtResource("1_1j77y")
metadata/_edit_horizontal_guides_ = []

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0sa1h")
volume_db = 24.0
autoplay = true

[node name="AaBackground" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.371, 0.3)
texture = ExtResource("3_hijh1")
centered = false

[node name="CauldColor" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(687, 696)
scale = Vector2(0.339074, 0.259983)
texture = ExtResource("3_uwmjl")

[node name="Hair" parent="." instance=ExtResource("3_wpo1m")]
position = Vector2(658, 484)
scale = Vector2(0.3, 0.3)

[node name="Cauldron" parent="." instance=ExtResource("3_c5n6v")]
z_index = 2
position = Vector2(675, 765)

[node name="Bowl1" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
position = Vector2(250, 775)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_6glc5")

[node name="Bowl2" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
z_index = 1
position = Vector2(450, 768)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_eha88")

[node name="Bowl3" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
position = Vector2(250, 915)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_deqvn")

[node name="Bowl4" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
position = Vector2(450, 915)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_pti66")

[node name="Bowl5" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
z_index = 1
position = Vector2(915, 774)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_x3q62")

[node name="Bowl6" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
position = Vector2(1115, 915)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_3f5x8")

[node name="Bowl7" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
position = Vector2(915, 915)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_gskca")

[node name="Bowl8" parent="." groups=["Bowls"] instance=ExtResource("4_oqy5q")]
position = Vector2(1115, 777)
scale = Vector2(0.12, 0.12)
ingredInfo = SubResource("Resource_wuya8")

[node name="PotionFiller1" parent="." instance=ExtResource("13_6m1k2")]
position = Vector2(78, 220)
scale = Vector2(0.06, 0.06)

[node name="PotionBottle" parent="PotionFiller1" instance=ExtResource("13_vxoe3")]
scale = Vector2(1.02, 1.02)

[node name="PotionFiller2" parent="." instance=ExtResource("13_6m1k2")]
position = Vector2(188, 220)
scale = Vector2(0.06, 0.06)

[node name="PotionBottle" parent="PotionFiller2" instance=ExtResource("13_vxoe3")]
scale = Vector2(1.02, 1.02)

[node name="PotionFiller3" parent="." instance=ExtResource("13_6m1k2")]
position = Vector2(298, 220)
scale = Vector2(0.06, 0.06)

[node name="PotionBottle" parent="PotionFiller3" instance=ExtResource("13_vxoe3")]
scale = Vector2(1.02, 1.02)

[node name="PotionFiller4" parent="." instance=ExtResource("13_6m1k2")]
position = Vector2(78, 470)
scale = Vector2(0.06, 0.06)

[node name="PotionBottle" parent="PotionFiller4" instance=ExtResource("13_vxoe3")]
scale = Vector2(1.02, 1.02)

[node name="PotionFiller5" parent="." instance=ExtResource("13_6m1k2")]
position = Vector2(188, 470)
scale = Vector2(0.06, 0.06)

[node name="PotionBottle" parent="PotionFiller5" instance=ExtResource("13_vxoe3")]
scale = Vector2(1.02, 1.02)

[node name="PotionFiller6" parent="." instance=ExtResource("13_6m1k2")]
position = Vector2(298, 470)
scale = Vector2(0.06, 0.06)

[node name="PotionBottle" parent="PotionFiller6" instance=ExtResource("13_vxoe3")]
scale = Vector2(1.02, 1.02)

[node name="IngredPath" type="Path2D" parent="."]
position = Vector2(0, -2)
curve = SubResource("Curve2D_7seai")
script = ExtResource("10_c6hfc")

[node name="IngredPathFollow" type="PathFollow2D" parent="IngredPath"]
position = Vector2(680, 475)
rotation = 1.5708

[node name="IngredSprite" type="Sprite2D" parent="IngredPath/IngredPathFollow"]
z_index = 2
rotation = -1.5708
scale = Vector2(0.1, 0.1)
script = ExtResource("11_o5g3n")

[node name="Area2D" type="Area2D" parent="IngredPath/IngredPathFollow/IngredSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IngredPath/IngredPathFollow/IngredSprite/Area2D"]
shape = SubResource("CapsuleShape2D_hemfe")

[node name="ResetButton" type="TextureButton" parent="."]
offset_left = 1339.0
offset_top = 859.0
offset_right = 1464.0
offset_bottom = 984.0
texture_normal = ExtResource("25_kvh8o")
stretch_mode = 4

[node name="MenuButton" type="Sprite2D" parent="."]
position = Vector2(73, 60)
scale = Vector2(0.2, 0.2)
texture = ExtResource("18_c4fn2")
script = ExtResource("17_nwgeh")

[node name="Area2D" type="Area2D" parent="MenuButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MenuButton/Area2D"]
shape = SubResource("RectangleShape2D_u4l8t")

[node name="ColorCheckButton" parent="." instance=ExtResource("18_hem06")]
position = Vector2(1063, 240)
scale = Vector2(1.2, 1.2)

[node name="GameTypeButton" type="TextureButton" parent="."]
offset_left = 1327.0
offset_top = 22.0
offset_right = 1577.0
offset_bottom = 149.0
texture_normal = ExtResource("29_u68kk")
script = ExtResource("21_1xi6p")

[node name="Welcome" type="TextureButton" parent="."]
offset_left = 1564.0
offset_top = 113.0
offset_right = 3889.0
offset_bottom = 2257.0
scale = Vector2(0.5, 0.5)
action_mode = 0
texture_normal = ExtResource("20_10sln")
script = ExtResource("13_nsqdl")

[node name="Agatha" type="Node2D" parent="."]

[node name="AgathasBody" type="Sprite2D" parent="Agatha"]
position = Vector2(667.85, 521)
scale = Vector2(0.34282, 0.35)
texture = ExtResource("33_63m2y")

[node name="AgathasHat" type="Sprite2D" parent="Agatha"]
position = Vector2(693, 269)
scale = Vector2(0.25, 0.267659)
texture = ExtResource("34_pwty7")

[node name="Cat" type="Node2D" parent="."]

[node name="Cat" type="Sprite2D" parent="Cat"]
position = Vector2(1403, 746)
scale = Vector2(0.25, 0.25)
texture = ExtResource("36_ldfgg")

[connection signal="texture_changed" from="IngredPath/IngredPathFollow/IngredSprite" to="." method="_on_ingred_sprite_texture_changed"]
[connection signal="input_event" from="IngredPath/IngredPathFollow/IngredSprite/Area2D" to="IngredPath/IngredPathFollow/IngredSprite" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="IngredPath/IngredPathFollow/IngredSprite/Area2D" to="IngredPath/IngredPathFollow/IngredSprite" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="IngredPath/IngredPathFollow/IngredSprite/Area2D" to="IngredPath/IngredPathFollow/IngredSprite" method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="input_event" from="MenuButton/Area2D" to="Welcome" method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="MenuButton/Area2D" to="MenuButton" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="MenuButton/Area2D" to="MenuButton" method="_on_area_2d_mouse_exited"]
